--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - "*"
 
+env:
+  GHCR_REPO: ghcr.io/ad-on-is/odin
+
 concurrency:
   group: ${{ github.workflow }}
   cancel-in-progress: true
@@ -13,7 +16,23 @@ jobs:
   build-and-push:
     name: Build and push
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        platform:
+          - linux/amd64
+          - linux/arm64
     steps:
+      - name: Prepare
+        run: |
+          platform=${{ matrix.platform }}
+          echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.GHCR_REPO }}
       - name: Checkout
         uses: actions/checkout@v4
       - name: Log in to the Container registry
@@ -40,7 +59,7 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          platforms: linux/amd64,linux/arm64
+          platforms: ${{ matrix.platform }}
           tags: |
             ghcr.io/${{ github.actor }}/odin:${{ github.ref_name }}
             ghcr.io/${{ github.actor }}/odin:latest
