--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,77 +53,21 @@ jobs:
             }
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
+      - name: Set image tags
+        id: tags
+        run: |
+          if [ "${{ matrix.platform }}" = "linux/amd64" ]; then
+            echo "" >> $GITHUB_OUTPUT
+          else
+            echo "IMAGE_TAG=-arm64" >> $GITHUB_OUTPUT
+          fi
       - name: Build
         uses: docker/build-push-action@v6
         with:
           context: .
           file: Dockerfile
-          labels: ${{ steps.meta.outputs.labels }}
-          outputs: type=image,"name=${{ env.GHCR_REPO}}:latest,${{ env.GHCR_REPO }}:${{ github.ref_name }}",push-by-digest=true,name-canonical=true,push=true
-          # push: true
-          # platforms: ${{ matrix.platform }}
-          # tags: |
-          #   ghcr.io/${{ github.actor }}/odin:${{ github.ref_name }}
-          #   ghcr.io/${{ github.actor }}/odin:latest
-      - name: Export digest
-        run: |
-          mkdir -p /tmp/digests
-          digest="${{ steps.build.outputs.digest }}"
-          touch "/tmp/digests/${digest#sha256:}"
-
-      - name: Upload digest
-        uses: actions/upload-artifact@v4
-        with:
-          name: digests-${{ env.PLATFORM_PAIR }}
-          path: /tmp/digests/*
-          if-no-files-found: error
-          retention-days: 1
-
-  merge:
-    runs-on: ubuntu-latest
-    needs:
-      - build-and-push
-    steps:
-      - name: Download digests
-        uses: actions/download-artifact@v4
-        with:
-          path: /tmp/digests
-          pattern: digests-*
-          merge-multiple: true
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Login to GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.GHCR_REPO }}
+          push: true
+          platforms: ${{ matrix.platform }}
           tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-
-      - name: Create manifest list and push
-        working-directory: /tmp/digests
-        run: |
-          docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
-            $(printf '${{ env.GHCR_REPO }}@sha256:%s ' *)
-
-      - name: Inspect image
-        run: |
-          docker buildx imagetools inspect ${{ env.GHCR_REPO }}:${{ steps.meta.outputs.version }}
+            ghcr.io/${{ github.actor }}/odin:${{ github.ref_name }}${{steps.tags.outputs.IMAGE_TAG}}
+            ghcr.io/${{ github.actor }}/odin:latest${{steps.tags.outputs.IMAGE_TAG}}
